--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="base.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="responsive-base.css">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100&display=swap" rel="stylesheet">
 		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 	</head>
@@ -17,9 +18,9 @@
 		<main>
 			<div class="top">This is me</div>
 			<div class="section about-me">
-				<div class="section-title">Works</div>
+				<h1>Works</h1>
 				<div class="article">
-					<p>Design</p>
+					<h2>Design</h2>
 					<div class="works">
 						<img src="img/government_of_by_for.jpg">
 						<img src="img/apricity.jpg">
