--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144580298-2"></script>
 		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);
-							gtag('js', new Date());
-							gtag('config', 'UA-144580298-2');
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+
+  			gtag('config', 'UA-144580298-2');
 		</script>
+
 	</head>
 	<body>
 		<div id="js-loader" class="loader">
