--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   			gtag('config', 'UA-144580298-2');
 		</script>
-
+		<title>This is me</title>
 	</head>
 	<body>
 		<div id="js-loader" class="loader">
