--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 					</div>
 				</div>
 			</div>
+			<div class="sns">
+        		<div class="instagram">
+          			インスタグラムでも活動の様子を公開中です
+        		</div>
+        		<a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
+        			<i class="fab fa-instagram"></i> <span>Follow Us</span>
+        		</a>
+      		</div>
 		</main>
 		<footer>
 			<div class="copy-rights">Copyrights © 2019- sp_sf_works. All Rights Reserved.</div>
