--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100&display=swap" rel="stylesheet">
 		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144580298-2"></script>
+		<script src="https://kit.fontawesome.com/e2982d923f.js" crossorigin="anonymous"></script>
 		<script>
   			window.dataLayer = window.dataLayer || [];
   			function gtag(){dataLayer.push(arguments);}
@@ -38,14 +38,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="sns">
-        		<div class="instagram">
-          			インスタグラムでも活動の様子を公開中です
-        		</div>
-        		<a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
-        			<i class="fab fa-instagram"></i> <span>Follow Us</span>
-        		</a>
-      		</div>
+        	<div class="instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener">View more on Instagram</a></div>
 		</main>
 		<footer>
 			<div class="copy-rights">Copyrights © 2019- sp_sf_works. All Rights Reserved.</div>
