--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			<div class="loader-animation"></div>
 		</div>
 		<header>
-			<div class="header-logo">This is me</div>
+			
 		</header>
 		<main>
 			<div class="top">This is me</div>
-			<div class="section about-me">
+			<div class="section">
 				<h1>Works</h1>
 				<div class="article">
 					<h2>Design</h2>
@@ -36,9 +36,35 @@
 						<img src="img/apricity.jpg">
 						<img src="img/wanderlust.jpg">
 					</div>
+					<div class="instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener">View more on Instagram</a></div>
 				</div>
 			</div>
-        	<div class="instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener">View more on Instagram</a></div>
+        	<div class="section">
+				<h1>About me</h1>
+				<div class="article">
+					<h2>Profile</h2>
+					<ul class="prof">
+						<li>A high school student in Yokohama</li>
+						<li>Create following my curiousity</li>
+					</ul>
+					<h2>Skills</h2>
+					<ul class="prof">
+						<li>Web design<br>
+							<span>＊HTML / CSS / jQuery (Atom Brackets)</span>
+						</li>
+						<li>Design<br>
+							<span>＊XD</span>
+						</li>
+						<li>Learning<br>
+							<span>
+								＊Media art (C++ | openFrameworks)<br>
+								＊Android (Java)<br>
+								＊iPhone (Swift)
+							</span>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</main>
 		<footer>
 			<div class="copy-rights">Copyrights © 2019- sp_sf_works. All Rights Reserved.</div>
