add twitter card

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="og:url" content="https://this-is-me.netlify.com" />
+		<meta property="og:title" content="This is me" />
+		<meta property="og:description" content="sp_sf_works Portfolio2019" />
+		<meta property="og:image" content="cover.jpg" />
 		<link rel="stylesheet" href="base.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="responsive-base.css">
