--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta property="og:url" content="https://this-is-me.netlify.com" />
 		<meta property="og:title" content="This is me" />
 		<meta property="og:description" content="sp_sf_works Portfolio2019" />
-		<meta property="og:image" content="cover.jpg" />
+		<meta property="og:image" content="cover.png" />
 		<link rel="stylesheet" href="base.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="responsive-base.css">
@@ -28,7 +28,7 @@
 			<div class="loader-animation"></div>
 		</div>
 		<header>
-			
+
 		</header>
 		<main>
 			<div class="top">This is me</div>
