--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<img src="img/apricity.jpg">
 						<img src="img/wanderlust.jpg">
 					</div>
-					<div class="instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener">View more on Instagram</a></div>
+					<div class="go-instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener"> View more on Instagram </a></div>
 				</div>
 			</div>
         	<div class="section">
@@ -68,6 +68,26 @@
 							</span>
 						</li>
 					</ul>
+				</div>
+			</div>
+			<div class="section">
+				<h1>Links</h1>
+				<div class="article icons">
+					<div class="icon github">
+						<a href="https://github.com/sprite-tech" target="_blank" rel="noopener">
+							<i class="fab fa-github-square"></i>
+						</a>
+					</div>
+					<div class="icon instagram">
+						<a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener">
+							<i class="fab fa-instagram"></i>
+						</a>
+					</div>
+					<div class="icon twitter">
+						<a href="https://www.twitter.com/sprite_tech_k" target="_blank" rel="noopener">
+							<i class="fab fa-twitter-square"></i>
+						</a>
+					</div>
 				</div>
 			</div>
 		</main>
