--- a/index.html
+++ b/index.html
@@ -28,12 +28,37 @@
 			<div class="loader-animation"></div>
 		</div>
 		<header>
-
+			<div id="overlay"></div>
+			<div id="slide-contents">
+				<p id="menu">
+					<a class="menu-trigger" href="#">
+						<span></span>
+						<span></span>
+						<span></span>
+					</a>
+				</p>
+        		<div id="slide">
+					<div class="close-menu">
+          				<h3>MENU</h3>
+						<h3 id="close">×</h3>
+					</div>
+          			<a href="#works" class="scr">
+						<p>Works</p>
+					</a>
+          			<a href="#about-me" class="scr">
+						<p>About me</p>
+					</a>
+          			<a href="#links" class="scr">
+						<p>Links</p>
+					</a>
+        		</div>
+      		</div>
 		</header>
 		<main>
 			<div class="top">This is me</div>
+			
 			<div class="section">
-				<h1>Works</h1>
+				<h1 id="works">Works</h1>
 				<div class="article">
 					<h2>Design</h2>
 					<div class="works">
@@ -45,7 +70,7 @@
 				</div>
 			</div>
         	<div class="section">
-				<h1>About me</h1>
+				<h1 id="about-me">About me</h1>
 				<div class="article">
 					<h2>Profile</h2>
 					<ul class="prof">
@@ -71,7 +96,7 @@
 				</div>
 			</div>
 			<div class="section">
-				<h1>Links</h1>
+				<h1 id="links">Links</h1>
 				<div class="article icons">
 					<div class="icon github">
 						<a href="https://github.com/sprite-tech" target="_blank" rel="noopener">
