--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<h2>Skills</h2>
 					<ul class="prof">
 						<li>Web design<br>
-							<span>＊HTML / CSS / jQuery (Atom Brackets VS Code)</span>
+							<span>＊HTML / CSS / jQuery (Atom, Brackets, VS Code)</span>
 						</li>
 						<li>Design<br>
 							<span>＊XD</span>
