--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100&display=swap" rel="stylesheet">
 		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script src="https://kit.fontawesome.com/e2982d923f.js" crossorigin="anonymous"></script>
-		<script>
-  			window.dataLayer = window.dataLayer || [];
-  			function gtag(){dataLayer.push(arguments);}
-  			gtag('js', new Date());
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144580298-2"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
 
-  			gtag('config', 'UA-144580298-2');
-		</script>
+			  gtag('config', 'UA-144580298-2');
+			</script>
+
 		<title>This is me</title>
 	</head>
 	<body>
