--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div id="overlay"></div>
 			<div id="slide-contents">
 				<p id="menu">
-					<a class="menu-trigger" href="#">
+					<a class="menu-trigger">
 						<span></span>
 						<span></span>
 						<span></span>
