--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144580298-2"></script>
 			<script>
-			  window.dataLayer = window.dataLayer || [];
-			  function gtag(){dataLayer.push(arguments);}
-			  gtag('js', new Date());
+				window.dataLayer = window.dataLayer || [];
+			  	function gtag(){dataLayer.push(arguments);}
+			  	gtag('js', new Date());
 
-			  gtag('config', 'UA-144580298-2');
+				gtag('config', 'UA-144580298-2');
 			</script>
 
 		<title>This is me</title>
@@ -63,9 +63,9 @@
 				<div class="article">
 					<h2>Design</h2>
 					<div class="works">
-						<img src="img/government_of_by_for.jpg">
-						<img src="img/apricity.jpg">
-						<img src="img/wanderlust.jpg">
+						<a href="#work1"><img src="img/government_of_by_for.jpg"></a>
+						<a href="#work2"><img src="img/apricity.jpg"></a>
+						<a href="#work3"><img src="img/wanderlust.jpg"></a>
 					</div>
 					<div class="go-instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener"> View more on Instagram </a></div>
 				</div>
