--- a/index.html
+++ b/index.html
@@ -63,9 +63,41 @@
 				<div class="article">
 					<h2>Design</h2>
 					<div class="works">
-						<a href="#work1"><img src="img/government_of_by_for.jpg"></a>
-						<a href="#work2"><img src="img/apricity.jpg"></a>
-						<a href="#work3"><img src="img/wanderlust.jpg"></a>
+						<div class="work">
+							<a href="">
+								<img src="img/government_of_by_for.jpg">
+								<div class="mask"></div>
+							</a>
+							<div class="modal">
+								<img src="img/government_of_by_for.jpg">
+							</div>
+						</div>
+						<div class="work">
+							<a href="">
+								<img src="img/apricity.jpg">
+								<div class="mask"></div>
+							</a>
+							<div class="modal">
+								<img src="img/apricity.jpg">
+							</div>
+						</div>
+						<div class="work">
+							<a href="">
+								<img src="img/wanderlust.jpg">
+								<div class="mask"></div>
+							</a>
+							<div class="modal">
+								<div class="modal_img">
+									<img src="img/wanderlust.jpg">
+								</div>
+								<div class="m_content">
+									<h3>Wanderlust<br>
+										<span></span>
+									</h3>
+									<p></p>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="go-instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener"> View more on Instagram </a></div>
 				</div>
