--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</header>
 		<main>
 			<div class="top">This is me</div>
-			
+
 			<div class="section">
 				<h1 id="works">Works</h1>
 				<div class="article">
@@ -137,12 +137,12 @@
 						</a>
 					</div>
 					<div class="icon instagram">
-						<a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener">
+						<a href="https://www.instagram.com/sp_sf_works__/" target="_blank" rel="noopener">
 							<i class="fab fa-instagram"></i>
 						</a>
 					</div>
 					<div class="icon twitter">
-						<a href="https://www.twitter.com/sprite_tech_k" target="_blank" rel="noopener">
+						<a href="https://www.twitter.com/sp_sf_works__" target="_blank" rel="noopener">
 							<i class="fab fa-twitter-square"></i>
 						</a>
 					</div>
