--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="go-instagram"><a href="https://www.instagram.com/sp_sf_works_/" target="_blank" rel="noopener"> View more on Instagram </a></div>
+					<div class="go-instagram"><a href="https://www.instagram.com/sp_sf_works__/" target="_blank" rel="noopener"> View more on Instagram </a></div>
 				</div>
 			</div>
         	<div class="section">
